<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ContasActivity">

    <item android:id="@+id/action_visao_totalizador"
        android:title="@string/action_visao_totalizador"
        android:hint="@string/action_visao_totalizador"
        android:icon="@drawable/ic_visao_totalizador"
        app:showAsAction="always" />

    <item android:id="@+id/action_ordenacao_lancamentos"
        android:title="@string/action_ordenar_lancamentos_asc"
        android:hint="@string/action_ordenar_lancamentos_asc"
        android:icon="@drawable/ic_sort_date_asc"
        app:showAsAction="always" />

    <item android:id="@+id/action_data"
        android:title="@string/action_data"
        android:hint="@string/action_data"
        app:showAsAction="always" />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:hint="@string/action_settings"
        android:icon="@drawable/ic_action_settings"
        app:showAsAction="always" />

</menu>
